--- a/src/project/LoginForm.fxml
+++ b/src/project/LoginForm.fxml
@@ -9,16 +9,16 @@
 <BorderPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
             fx:controller="project.LoginForm"
-            prefHeight="400.0" prefWidth="600.0">
+            prefHeight="400.0" prefWidth="600.0" fx:id="borderPane">
     <center>
         <VBox spacing="20" alignment="CENTER">
             <Label text="Logowanie" textAlignment="CENTER" style="-fx-font-size: 32px; -fx-text-fill: orange;"/>
             <ListView fx:id="accountsList" onMouseClicked="#showOptions">
             </ListView>
             <HBox fx:id="hBox" spacing="20" visible="false" alignment="CENTER">
-                <Button text="Zaloguj" textAlignment="CENTER" minWidth="100" minHeight="25" style="-fx-background-radius: 30px;"/>
-                <Button text="Edytuj" textAlignment="CENTER" minWidth="100" minHeight="25" style="-fx-background-radius: 30px;"/>
-                <Button text="Usuń" textAlignment="CENTER" minWidth="100" minHeight="25" style="-fx-background-radius: 30px;"/>
+                <Button text="Zaloguj" textAlignment="CENTER" onAction="#login" minWidth="100" minHeight="25" style="-fx-background-radius: 30px;"/>
+                <Button text="Edytuj" textAlignment="CENTER" onAction="#editAccount" minWidth="100" minHeight="25" style="-fx-background-radius: 30px;"/>
+                <Button text="Usuń" textAlignment="CENTER" onAction="#deleteAccount" minWidth="100" minHeight="25" style="-fx-background-radius: 30px;"/>
             </HBox>
         </VBox>
     </center>
