--- a/src/project/EditDialog.fxml
+++ b/src/project/EditDialog.fxml
@@ -8,7 +8,7 @@
 
 <BorderPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="project.EditDialog">
+            fx:controller="project.EditDialogController">
     <center>
         <GridPane alignment="CENTER" hgap="10" vgap="15">
             <Label text="Nowy login: " textAlignment="CENTER" GridPane.rowIndex="0" GridPane.columnIndex="0" style="-fx-font-size: 15px;"/>
