--- a/src/project/LoginDialog.fxml
+++ b/src/project/LoginDialog.fxml
@@ -9,7 +9,7 @@
 <?import javafx.geometry.Insets?>
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="project.LoginDialog">
+            fx:controller="project.LoginDialogController">
     <BorderPane>
         <center>
             <VBox alignment="CENTER">
