--- a/src/project/LoginForm.fxml
+++ b/src/project/LoginForm.fxml
@@ -8,7 +8,7 @@
 
 <BorderPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="project.LoginForm"
+            fx:controller="project.LoginFormController"
             prefHeight="400.0" prefWidth="600.0" fx:id="borderPane">
     <center>
         <VBox spacing="20" alignment="CENTER">
