--- a/src/project/WarehouseDialog.fxml
+++ b/src/project/WarehouseDialog.fxml
@@ -6,10 +6,12 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
+<?import javafx.geometry.Insets?>
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="project.CreateWarehouseDialogController">
-    <GridPane alignment="CENTER" vgap="10" hgap="10">
+            fx:controller="project.WarehouseDialogController">
+    <GridPane alignment="CENTER" vgap="5">
+        <padding><Insets top="10" left="10"/></padding>
         <Label text="Nazwa magazynu: " textAlignment="CENTER" GridPane.rowIndex="0" GridPane.columnIndex="0" style="-fx-font-size: 16px;"/>
         <TextField fx:id="name" GridPane.rowIndex="0" GridPane.columnIndex="1"/>
         <Label text="Ulica: " GridPane.rowIndex="1" GridPane.columnIndex="0" textAlignment="CENTER" style="-fx-font-size: 16px;"/>
