--- a/src/project/DepartmentWindow.fxml
+++ b/src/project/DepartmentWindow.fxml
@@ -8,16 +8,16 @@
 
 <BorderPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="project.DepartmentWindowController">
+            fx:controller="project.DepartmentWindowController" fx:id="borderPane">
     <left>
-        <HBox>
-            <Label text="Powrót" onMouseClicked="#displayPreviousPage" style="-fx-font-size: 20px;"/>
+        <HBox prefWidth="40">
+            <Label text="Powrót" onMouseClicked="#displayPreviousPage" style="-fx-font-size: 12px; -fx-text-fill: orange;"/>
         </HBox>
     </left>
     <center>
-        <VBox alignment="CENTER" spacing="10">
+        <VBox alignment="CENTER" spacing="10" prefWidth="320">
             <Label text="Działy" textAlignment="CENTER" style="-fx-font-size: 32px; -fx-text-fill: orange;"/>
-            <ListView fx:id="departmentsList">
+            <ListView fx:id="departmentsList" onMouseClicked="#showOptions">
             </ListView>
             <Button fx:id="insertDepartmentButton" text="Dodaj dział" textAlignment="CENTER" minWidth="120" minHeight="30" onAction="#insertDepartment" style="-fx-background-radius: 30px;"/>
             <HBox fx:id="hBox" spacing="15" alignment="CENTER">
@@ -26,4 +26,7 @@
             </HBox>
         </VBox>
     </center>
+    <right>
+        <HBox prefWidth="40"></HBox>
+    </right>
 </BorderPane>
