--- a/src/project/Report.fxml
+++ b/src/project/Report.fxml
@@ -8,8 +8,12 @@
 
 <BorderPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="project.ReportController"
-            prefHeight="400.0" prefWidth="600.0">
+            fx:controller="project.ReportController" fx:id="borderPane">
+    <left>
+        <HBox prefWidth="40">
+            <Label text="Powrót" onMouseClicked="#displayPreviousPage" style="-fx-font-size: 12px; -fx-text-fill: orange;"/>
+        </HBox>
+    </left>
     <center>
         <VBox alignment="CENTER" spacing="25">
             <Label text="Lista rekordów" textAlignment="CENTER" style="-fx-font-size: 30px; -fx-text-fill: orange;"/>
@@ -21,4 +25,5 @@
             </HBox>
         </VBox>
     </center>
+    <right><HBox prefWidth="40"/></right>
 </BorderPane>
