--- a/src/project/LoginForm.fxml
+++ b/src/project/LoginForm.fxml
@@ -10,6 +10,11 @@
             xmlns:fx="http://javafx.com/fxml"
             fx:controller="project.LoginFormController"
             prefHeight="400.0" prefWidth="600.0" fx:id="borderPane">
+    <left>
+        <HBox prefWidth="40">
+            <Label text="Powrót" onMouseClicked="#displayPreviousPage" style="-fx-font-size: 12px; -fx-text-fill: orange;"/>
+        </HBox>
+    </left>
     <center>
         <VBox spacing="20" alignment="CENTER">
             <Label text="Logowanie" textAlignment="CENTER" style="-fx-font-size: 32px; -fx-text-fill: orange;"/>
@@ -22,4 +27,7 @@
             </HBox>
         </VBox>
     </center>
+    <right>
+        <HBox prefWidth="40"/>
+    </right>
 </BorderPane>
