--- a/src/project/WorkerWindow.fxml
+++ b/src/project/WorkerWindow.fxml
@@ -16,32 +16,32 @@
         </HBox>
     </left>
     <center>
-        <VBox alignment="CENTER" spacing="10" prefWidth="320">
+        <VBox alignment="CENTER" spacing="10" prefWidth="400">
             <Label text="Podlegli pracownicy" textAlignment="CENTER" style="-fx-font-size: 32px; -fx-text-fill: orange;"/>
-            <TableView fx:id="workersList" onMouseClicked="#showOptions">
+            <TableView fx:id="workersList" onMouseClicked="#showOptions" prefWidth="400" style="-fx-font-size: 14px;">
                 <columns>
-                    <TableColumn text="Name">
+                    <TableColumn text="Imie" prefWidth="133">
                         <cellValueFactory>
                             <PropertyValueFactory property="name"/>
                         </cellValueFactory>
                     </TableColumn>
-                    <TableColumn text="Surname">
+                    <TableColumn text="Nazwisko" prefWidth="133">
                         <cellValueFactory>
                             <PropertyValueFactory property="surname"/>
                         </cellValueFactory>
                     </TableColumn>
-                    <TableColumn text="Email">
+                    <TableColumn text="Email" prefWidth="133">
                         <cellValueFactory>
                             <PropertyValueFactory property="email"/>
                         </cellValueFactory>
                     </TableColumn>
                 </columns>
             </TableView>
-            <Button fx:id="addWorkerButton" text="Dodaj" textAlignment="CENTER" minWidth="80" minHeight="20" onAction="#addWorker" style="-fx-background-radius: 30px;"/>
+            <Button fx:id="addWorkerButton" text="Dodaj" textAlignment="CENTER" minWidth="100" minHeight="25" onAction="#addWorker" style="-fx-background-radius: 30px;"/>
             <HBox fx:id="hBox" spacing="15" alignment="CENTER">
-                <Button text="Edytuj" textAlignment="CENTER" minWidth="80" minHeight="20" onAction="#editWorker" style="-fx-background-radius: 30px;"/>
-                <Button text="Usuń" textAlignment="CENTER" minWidth="80" minHeight="20" onAction="#deleteWorker" style="-fx-background-radius: 30px;"/>
-                <Button text="Przydziel obowiązki" textAlignment="CENTER" minWidth="80" minHeight="20" onAction="#loadDutyPage" style="-fx-background-radius: 30px;"/>
+                <Button text="Edytuj" textAlignment="CENTER" minWidth="100" minHeight="25" onAction="#editWorker" style="-fx-background-radius: 30px;"/>
+                <Button text="Usuń" textAlignment="CENTER" minWidth="100" minHeight="25" onAction="#deleteWorker" style="-fx-background-radius: 30px;"/>
+                <Button text="Przydziel obowiązki" textAlignment="CENTER" minWidth="100" minHeight="25" onAction="#loadDutyPage" style="-fx-background-radius: 30px;"/>
             </HBox>
         </VBox>
     </center>
