--- a/src/project/DepartmentWindow.fxml
+++ b/src/project/DepartmentWindow.fxml
@@ -15,9 +15,9 @@
         </HBox>
     </left>
     <center>
-        <VBox alignment="CENTER" spacing="10" prefWidth="320">
+        <VBox alignment="CENTER" spacing="10" prefWidth="400">
             <Label text="Działy" textAlignment="CENTER" style="-fx-font-size: 32px; -fx-text-fill: orange;"/>
-            <ListView fx:id="departmentsList" onMouseClicked="#showOptions">
+            <ListView fx:id="departmentsList" onMouseClicked="#showOptions" style="-fx-font-size: 14px;">
             </ListView>
             <Button fx:id="insertDepartmentButton" text="Dodaj dział" textAlignment="CENTER" minWidth="120" minHeight="30" onAction="#insertDepartment" style="-fx-background-radius: 30px;"/>
             <HBox fx:id="hBox" spacing="15" alignment="CENTER">
