--- a/src/project/DesignerWindow.fxml
+++ b/src/project/DesignerWindow.fxml
@@ -16,36 +16,36 @@
         </HBox>
     </left>
     <center>
-        <VBox alignment="CENTER" spacing="10" prefWidth="320">
+        <VBox alignment="CENTER" spacing="10" prefWidth="400">
             <Label text="Projektanci" textAlignment="CENTER" style="-fx-font-size: 32px; -fx-text-fill: orange;"/>
-            <TableView fx:id="designersList" onMouseClicked="#showOptions">
+            <TableView fx:id="designersList" onMouseClicked="#showOptions" prefWidth="400" style="-fx-font-size: 14px;">
                 <columns>
-                    <TableColumn text="Imię">
+                    <TableColumn text="Imię" prefWidth="100">
                         <cellValueFactory>
                             <PropertyValueFactory property="name"/>
                         </cellValueFactory>
                     </TableColumn>
-                    <TableColumn text="Nazwisko">
+                    <TableColumn text="Nazwisko" prefWidth="100">
                         <cellValueFactory>
                             <PropertyValueFactory property="surname"/>
                         </cellValueFactory>
                     </TableColumn>
-                    <TableColumn text="Numer telefonu">
+                    <TableColumn text="Numer telefonu" prefWidth="100">
                         <cellValueFactory>
                             <PropertyValueFactory property="phoneNumber"/>
                         </cellValueFactory>
                     </TableColumn>
-                    <TableColumn text="Email">
+                    <TableColumn text="Email" prefWidth="100">
                         <cellValueFactory>
                             <PropertyValueFactory property="email"/>
                         </cellValueFactory>
                     </TableColumn>
                 </columns>
             </TableView>
-            <Button fx:id="addDesignerButton" text="Zatrudnij" textAlignment="CENTER" minWidth="80" minHeight="20" onAction="#addDesigner" style="-fx-background-radius: 30px;"/>
+            <Button fx:id="addDesignerButton" text="Zatrudnij" textAlignment="CENTER" minWidth="100" minHeight="25" onAction="#addDesigner" style="-fx-background-radius: 30px;"/>
             <HBox fx:id="hBox" spacing="15" alignment="CENTER">
-                <Button text="Edytuj dane" textAlignment="CENTER" minWidth="80" minHeight="20" onAction="#editDesigner" style="-fx-background-radius: 30px;"/>
-                <Button text="Zwolnij" textAlignment="CENTER" minWidth="80" minHeight="20" onAction="#deleteDesigner" style="-fx-background-radius: 30px;"/>
+                <Button text="Edytuj dane" textAlignment="CENTER" minWidth="100" minHeight="25" onAction="#editDesigner" style="-fx-background-radius: 30px;"/>
+                <Button text="Zwolnij" textAlignment="CENTER" minWidth="100" minHeight="25" onAction="#deleteDesigner" style="-fx-background-radius: 30px;"/>
             </HBox>
         </VBox>
     </center>
