--- a/src/project/ExpositionWindow.fxml
+++ b/src/project/ExpositionWindow.fxml
@@ -16,27 +16,27 @@
         </HBox>
     </left>
     <center>
-        <VBox alignment="CENTER" spacing="10" prefWidth="320">
+        <VBox alignment="CENTER" spacing="10" prefWidth="400">
             <Label text="Ekspozycje" textAlignment="CENTER" style="-fx-font-size: 32px; -fx-text-fill: orange;"/>
-            <TableView fx:id="expositionsList" onMouseClicked="#showOptions">
+            <TableView fx:id="expositionsList" onMouseClicked="#showOptions" prefWidth="400" style="-fx-font-size: 14px;">
                 <columns>
-                    <TableColumn text="Nazwa">
+                    <TableColumn text="Nazwa" prefWidth="200">
                         <cellValueFactory>
                             <PropertyValueFactory property="name"/>
                         </cellValueFactory>
                     </TableColumn>
-                    <TableColumn text="Cena">
+                    <TableColumn text="Cena" prefWidth="200">
                         <cellValueFactory>
                             <PropertyValueFactory property="price"/>
                         </cellValueFactory>
                     </TableColumn>
                 </columns>
             </TableView>
-            <Button fx:id="addExpositionButton" text="Dodaj" textAlignment="CENTER" minWidth="80" minHeight="20" onAction="#addExposition" style="-fx-background-radius: 30px;"/>
+            <Button fx:id="addExpositionButton" text="Dodaj" textAlignment="CENTER" minWidth="120" minHeight="30" onAction="#addExposition" style="-fx-background-radius: 30px;"/>
             <HBox fx:id="hBox" spacing="15" alignment="CENTER">
-                <Button text="Usuń" textAlignment="CENTER" minWidth="80" minHeight="20" onAction="#deleteExposition" style="-fx-background-radius: 30px;"/>
-                <Button text="Towary" textAlignment="CENTER" minWidth="80" minHeight="20" onAction="#loadCommodityPage" style="-fx-background-radius: 30px;"/>
-                <Button text="Projektanci" textAlignment="CENTER" minWidth="80" minHeight="20" onAction="#loadDesignerPage" style="-fx-background-radius: 30px;"/>
+                <Button text="Usuń" textAlignment="CENTER" minWidth="120" minHeight="30" onAction="#deleteExposition" style="-fx-background-radius: 30px;"/>
+                <Button text="Towary" textAlignment="CENTER" minWidth="120" minHeight="30" onAction="#loadCommodityPage" style="-fx-background-radius: 30px;"/>
+                <Button text="Projektanci" textAlignment="CENTER" minWidth="120" minHeight="30" onAction="#loadDesignerPage" style="-fx-background-radius: 30px;"/>
             </HBox>
         </VBox>
     </center>
