--- a/src/project/ReferenceWindow.fxml
+++ b/src/project/ReferenceWindow.fxml
@@ -18,7 +18,7 @@
     <center>
         <VBox alignment="CENTER" spacing="25">
             <Label text="Referencje projektantów" textAlignment="CENTER" style="-fx-font-size: 32px; -fx-text-fill: orange;"/>
-            <TableView prefWidth="400" style="-fx-font-size: 16px;">
+            <TableView fx:id="referencesTable" prefWidth="400" style="-fx-font-size: 16px;">
               <columns>
                   <TableColumn text="Autor" prefWidth="200">
                       <cellValueFactory>
